PCI8154/Library/Include/pci_8154.h

//Continuous Motion Section 6.17
I16 FNTYPE _8154_set_continuous_move(I16 AxisNo, I16 Enable);
I16 FNTYPE _8154_check_continuous_buffer(I16 AxisNo);
I16 FNTYPE _8154_dwell_move(I16 AxisNo, F64 milliSecond);
//Multiple Axes Simultaneous Operation Section 6.18
I16 FNTYPE _8154_set_tr_move_all(I16 TotalAxes, I16 *AxisArray, F64 *DistA, F64 *StrVelA, F64 *MaxVelA, F64 *TaccA, F64 *TdecA);
I16 FNTYPE _8154_set_sa_move_all(I16 TotalAx, I16 *AxisArray, F64 *PosA, F64 *StrVelA, F64 *MaxVelA, F64 *TaccA, F64 *TdecA, F64 *SVaccA, F64 *SVdecA);
I16 FNTYPE _8154_set_ta_move_all(I16 TotalAx, I16 *AxisArray, F64 *PosA, F64 *StrVelA, F64 *MaxVelA, F64 *TaccA, F64 *TdecA);
I16 FNTYPE _8154_set_sr_move_all(I16 TotalAx, I16 *AxisArray, F64 *DistA, F64 *StrVelA, F64 *MaxVelA, F64 *TaccA, F64 *TdecA, F64 *SVaccA, F64 *SVdecA);
I16 FNTYPE _8154_start_move_all(I16 FirstAxisNo);
I16 FNTYPE _8154_stop_move_all(I16 FirstAxisNo);
I16 FNTYPE _8154_set_sync_stop_mode(I16 AxisNo, I16 stop_mode);
I16 FNTYPE _8154_set_sync_option(I16 AxisNo, I16 sync_stop_on, I16 cstop_output_on, I16 sync_option1, I16 sync_option2);
I16 FNTYPE _8154_set_sync_signal_source(I16 AxisNo, I16 sync_axis);
I16 FNTYPE _8154_set_sync_signal_mode(I16 AxisNo, I16 mode);
//General-purposed Input/Output Section 6.19
I16 FNTYPE _8154_set_gpio_output(I16 CardId, I16 DoValue );
I16 FNTYPE _8154_get_gpio_output(I16 CardId, I16 *DoValue );
I16 FNTYPE _8154_get_gpio_input(I16 CardId, I16 *DiValue );
I16 FNTYPE _8154_set_gpio_input_function(I16 CardId, I16 Channel, I16 Select, I16 Logic);
//Soft Limit 6.20
I16 FNTYPE _8154_disable_soft_limit(I16 AxisNo);
I16 FNTYPE _8154_enable_soft_limit(I16 AxisNo, I16 Action);
I16 FNTYPE _8154_set_soft_limit(I16 AxisNo, I32 PlusLimit, I32 MinusLimit);
I16 FNTYPE _8154_check_soft_limit(I16 AxisNo, I16 *PlusLimit_sts, I16 *MinusLimit_sts);
//Backlas Compensation / Vibration Suppression 6.21
I16 FNTYPE _8154_backlash_comp(I16 AxisNo, I16 CompPulse, I16 Mode);
I16 FNTYPE _8154_suppress_vibration(I16 AxisNo, U16 ReverseTime, U16 ForwardTime);
I16 FNTYPE _8154_set_fa_speed(I16 AxisNo, F64 FA_Speed);
//Speed Profile Calculation 6.22
I16 FNTYPE _8154_get_tr_move_profile(I16 AxisNo, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 *pStrVel, F64 *pMaxVel, F64 *pTacc, F64 *pTdec, F64 *pTconst );
I16 FNTYPE _8154_get_ta_move_profile(I16 AxisNo, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 *pStrVel, F64 *pMaxVel, F64 *pTacc, F64 *pTdec, F64 *pTconst );
I16 FNTYPE _8154_get_sr_move_profile(I16 AxisNo, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec,F64 *pStrVel, F64 *pMaxVel, F64 *pTacc, F64 *pTdec, F64 *pSVacc, F64 *pSVdec, F64 *pTconst);
I16 FNTYPE _8154_get_sa_move_profile(I16 AxisNo, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec,F64 *pStrVel, F64 *pMaxVel, F64 *pTacc, F64 *pTdec, F64 *pSVacc, F64 *pSVdec, F64 *pTconst);
/****************************************************************************/
/*      DB-8150  Function  Declerations                                              */
/****************************************************************************/
// Initialization and System Information Section
// System Section 5.2
I16 FNTYPE _8154_db50_initial( I16 CardId );
I16 FNTYPE _8154_db50_close( I16 CardId );
I16 FNTYPE _8154_db50_get_DBfpga_version( I16 CardId, I16 *Version );
I16 FNTYPE _8154_db50_get_PCB_version( I16 CardId, I16 *Version );
//Encoder & Counter: Section 5.3
I16 FNTYPE _8154_db50_set_encoder_input_mode( I16 CardId, I16 Channel, I16 IptMode );
I16 FNTYPE _8154_db50_set_encoder_value( I16 CardId, I16 Channel, I32 EncValue );
I16 FNTYPE _8154_db50_get_encoder_value( I16 CardId, I16 Channel, I32 *EncValue );
I16 FNTYPE _8154_db50_set_encoder_up_down_count(I16 CardId, I16 Channel, I16 Inverse );
I16 FNTYPE _8154_db50_set_ez_clear( I16 CardId, I16 Channel, I16 Enable, I16 ClrLogic );
I16 FNTYPE _8154_db50_set_counter_source( I16 CardId, I16 Channel, I16 CtnSrc );
//PWM Configuration: Section 5.4
I16 FNTYPE _8154_db50_set_pwm_source( I16 CardId, I16 Channel, I16 CmpEn, I16 LinearEn, I16 TimerEn );
I16 FNTYPE _8154_db50_set_pwm_mode( I16 CardId, I16 Channel, I16 PulseOrToggle );
I16 FNTYPE _8154_db50_set_pwm_pulse_width( I16 CardId, I16 Channel, I32 WidthPara );
//TRG-OUT Configuration: Section 5.5
I16 FNTYPE _8154_db50_set_trigger_source( I16 CardId, I16 TriggerLine, I16 Channel, I16 Enable);
I16 FNTYPE _8154_db50_set_trigger_logic( I16 CardId, I16 TriggerLine, I16 Logic );
I16 FNTYPE _8154_db50_reset_trigger_num( I16 CardId, I16 Channel );
I16 FNTYPE _8154_db50_get_trigger_num( I16 CardId, I16 Channel, F64 *TriggerNum );
// Comparator: Section 5.6
I16 FNTYPE _8154_db50_enable_comparator( I16 CardId, I16 Enable );
I16 FNTYPE _8154_db50_set_comparator_data( I16 CardId, I32 CmpData );
I16 FNTYPE _8154_db50_get_comparator_data( I16 CardId, I32 *CmpData );
//FIFO Comparing: Section 5.7
I16 FNTYPE _8154_db50_reset_fifo( I16 CardId );
I16 FNTYPE _8154_db50_get_fifo_status( I16 CardId, I16 *FifoSts );
I16 FNTYPE _8154_db50_set_fifo_array( I16 CardId, I32 ArraySize, I32 *DataArr, I16 ShiftFlag );
I16 FNTYPE _8154_db50_set_fifo_shift( I16 CardId );
I16 FNTYPE _8154_db50_set_fifo_low_level( I16 CardId, I16 Level );
 
I16 FNTYPE _8154_db50_get_fifo_low_level( I16 CardId, I16 *Level );
// Linear Comparing: Section 5.8
I16 FNTYPE _8154_db50_enable_linear_compare( I16 CardId, I16 Channel, I16 Enable );
I16 FNTYPE _8154_db50_set_linear_compare( I16 CardId, I16 Channel, I32 StartPoint, F64 RepeatTimes, I16 Interval );
I16 FNTYPE _8154_db50_get_linear_compare_data( I16 CardId, I16 Channel, F64 *CurrentData);
// Manual Trigger: Section 5.9
I16 FNTYPE _8154_db50_manual_trigger( I16 CardId, I16 Channel );
//General-purposed Input/Output Section 5.10
I16 FNTYPE _8154_db50_set_gpio_output(I16 CardId, I16 DoValue );