PCI8154/Library/Include/pci_8154.bas


' Continuous Motion Section 6.17
Declare Function B_8154_set_continuous_move Lib "8154.dll" Alias "_8154_set_continuous_move" (ByVal AxisNo As Integer, ByVal enable As Integer) As Integer
Declare Function B_8154_check_continuous_buffer Lib "8154.dll" Alias "_8154_check_continuous_buffer" (ByVal AxisNo As Integer) As Integer
Declare Function B_8154_dwell_move Lib "8154.dll" Alias "_8154_dwell_move" (ByVal AxisNo As Integer, ByVal milliSecond As Double) As Integer
'
' Multiple Axes Simultaneous Operation Section 6.18
Declare Function B_8154_set_tr_move_all Lib "8154.dll" Alias "_8154_set_tr_move_all" (ByVal TotalAxes As Integer, AxisArray As Integer, DistA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double) As Integer
Declare Function B_8154_set_sa_move_all Lib "8154.dll" Alias "_8154_set_sa_move_all" (ByVal TotalAx As Integer, AxisArray As Integer, PosA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double, SVaccA As Double, SVdecA As Double) As Integer
Declare Function B_8154_set_ta_move_all Lib "8154.dll" Alias "_8154_set_ta_move_all" (ByVal TotalAx As Integer, AxisArray As Integer, PosA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double) As Integer
Declare Function B_8154_set_sr_move_all Lib "8154.dll" Alias "_8154_set_sr_move_all" (ByVal TotalAx As Integer, AxisArray As Integer, DistA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double, SVaccA As Double, SVdecA As Double) As Integer
Declare Function B_8154_start_move_all Lib "8154.dll" Alias "_8154_start_move_all" (ByVal FirstAxisNo As Integer) As Integer
Declare Function B_8154_stop_move_all Lib "8154.dll" Alias "_8154_stop_move_all" (ByVal FirstAxisNo As Integer) As Integer
Declare Function B_8154_set_sync_stop_mode Lib "8154.dll" Alias "_8154_set_sync_stop_mode" (ByVal AxisNo As Integer, ByVal stop_mode As Integer) As Integer
Declare Function B_8154_set_sync_option Lib "8154.dll" Alias "_8154_set_sync_option" (ByVal AxisNo As Integer, ByVal sync_stop_on As Integer, ByVal cstop_output_on As Integer, ByVal sync_option1 As Integer, ByVal sync_option2 As Integer) As Integer
Declare Function B_8154_set_sync_signal_source Lib "8154.dll" Alias "_8154_set_sync_signal_source" (ByVal AxisNo As Integer, ByVal sync_axis As Integer) As Integer
Declare Function B_8154_set_sync_signal_mode Lib "8154.dll" Alias "_8154_set_sync_signal_mode" (ByVal AxisNo As Integer, ByVal mode As Integer) As Integer
'
' General-purposed Input/Output Section 6.19
Declare Function B_8154_set_gpio_output Lib "8154.dll" Alias "_8154_set_gpio_output" (ByVal CardId As Integer, ByVal DoValue As Integer) As Integer
Declare Function B_8154_get_gpio_output Lib "8154.dll" Alias "_8154_get_gpio_output" (ByVal CardId As Integer, DoValue As Integer) As Integer
Declare Function B_8154_get_gpio_input Lib "8154.dll" Alias "_8154_get_gpio_input" (ByVal CardId As Integer, DiValue As Integer) As Integer
Declare Function B_8154_set_gpio_input_function Lib "8154.dll" Alias "_8154_set_gpio_input_function" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal Select_ As Integer, ByVal Logic As Integer) As Integer
'
' Soft Limit 6.20
Declare Function B_8154_disable_soft_limit Lib "8154.dll" Alias "_8154_disable_soft_limit" (ByVal AxisNo As Integer) As Integer
Declare Function B_8154_enable_soft_limit Lib "8154.dll" Alias "_8154_enable_soft_limit" (ByVal AxisNo As Integer, ByVal Action As Integer) As Integer
Declare Function B_8154_set_soft_limit Lib "8154.dll" Alias "_8154_set_soft_limit" (ByVal AxisNo As Integer, ByVal PlusLimit As Long, ByVal MinusLimit As Long) As Integer
Declare Function B_8154_check_soft_limit Lib "8154.dll" Alias "_8154_check_soft_limit" (ByVal AxisNo As Integer, PlusLimit_sts As Integer, MinusLimit_sts As Integer) As Integer
'
'
' Backlas Compensation / Vibration Suppression 6.21
Declare Function B_8154_backlash_comp Lib "8154.dll" Alias "_8154_backlash_comp" (ByVal AxisNo As Integer, ByVal CompPulse As Integer, ByVal mode As Integer) As Integer
Declare Function B_8154_suppress_vibration Lib "8154.dll" Alias "_8154_suppress_vibration" (ByVal AxisNo As Integer, ByVal ReverseTime As Integer, ByVal ForwardTime As Integer) As Integer
Declare Function B_8154_set_fa_speed Lib "8154.dll" Alias "_8154_set_fa_speed" (ByVal AxisNo As Integer, ByVal FA_Speed As Double) As Integer
'
' Speed Profile Calculation 6.22
Declare Function B_8154_get_tr_move_profile Lib "8154.dll" Alias "_8154_get_tr_move_profile" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, pStrVel As Double, pMaxVel As Double, pTacc As Double, pTdec As Double, pTconst As Double) As Integer
Declare Function B_8154_get_ta_move_profile Lib "8154.dll" Alias "_8154_get_ta_move_profile" (ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, pStrVel As Double, pMaxVel As Double, pTacc As Double, pTdec As Double, pTconst As Double) As Integer
Declare Function B_8154_get_sr_move_profile Lib "8154.dll" Alias "_8154_get_sr_move_profile" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double, pStrVel As Double, pMaxVel As Double, pTacc As Double, pTdec As Double, pSVacc As Double, pSVdec As Double, pTconst As Double) As Integer
Declare Function B_8154_get_sa_move_profile Lib "8154.dll" Alias "_8154_get_sa_move_profile" (ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double, pStrVel As Double, pMaxVel As Double, pTacc As Double, pTdec As Double, pSVacc As Double, pSVdec As Double, pTconst As Double) As Integer
'
' /****************************************************************************/
' /*      DB-8150  Function  Declerations                                              */
' /****************************************************************************/
'  Initialization and System Information Section
'  System Section 5.2
Declare Function B_8154_db50_initial Lib "8154.dll" Alias "_8154_db50_initial" (ByVal CardId As Integer) As Integer
Declare Function B_8154_db50_close Lib "8154.dll" Alias "_8154_db50_close" (ByVal CardId As Integer) As Integer
Declare Function B_8154_db50_get_DBfpga_version Lib "8154.dll" Alias "_8154_db50_get_DBfpga_version" (ByVal CardId As Integer, Version As Integer) As Integer
Declare Function B_8154_db50_get_PCB_version Lib "8154.dll" Alias "_8154_db50_get_PCB_version" (ByVal CardId As Integer, Version As Integer) As Integer
'
' Encoder & Counter: Section 5.3
Declare Function B_8154_db50_set_encoder_input_mode Lib "8154.dll" Alias "_8154_db50_set_encoder_input_mode" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal IptMode As Integer) As Integer
Declare Function B_8154_db50_set_encoder_value Lib "8154.dll" Alias "_8154_db50_set_encoder_value" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal EncValue As Long) As Integer
Declare Function B_8154_db50_get_encoder_value Lib "8154.dll" Alias "_8154_db50_get_encoder_value" (ByVal CardId As Integer, ByVal Channel As Integer, EncValue As Long) As Integer
Declare Function B_8154_db50_set_encoder_up_down_count Lib "8154.dll" Alias "_8154_db50_set_encoder_up_down_count" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal Inverse As Integer) As Integer
Declare Function B_8154_db50_set_ez_clear Lib "8154.dll" Alias "_8154_db50_set_ez_clear" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal enable As Integer, ByVal ClrLogic As Integer) As Integer
Declare Function B_8154_db50_set_counter_source Lib "8154.dll" Alias "_8154_db50_set_counter_source" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal CtnSrc As Integer) As Integer
'
' PWM Configuration: Section 5.4
Declare Function B_8154_db50_set_pwm_source Lib "8154.dll" Alias "_8154_db50_set_pwm_source" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal CmpEn As Integer, ByVal LinearEn As Integer, ByVal TimerEn As Integer) As Integer
Declare Function B_8154_db50_set_pwm_mode Lib "8154.dll" Alias "_8154_db50_set_pwm_mode" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal PulseOrToggle As Integer) As Integer
Declare Function B_8154_db50_set_pwm_pulse_width Lib "8154.dll" Alias "_8154_db50_set_pwm_pulse_width" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal WidthPara As Long) As Integer
'
' TRG-OUT Configuration: Section 5.5
Declare Function B_8154_db50_set_trigger_source Lib "8154.dll" Alias "_8154_db50_set_trigger_source" (ByVal CardId As Integer, ByVal TriggerLine As Integer, ByVal Channel As Integer, ByVal enable As Integer) As Integer
Declare Function B_8154_db50_set_trigger_logic Lib "8154.dll" Alias "_8154_db50_set_trigger_logic" (ByVal CardId As Integer, ByVal TriggerLine As Integer, ByVal Logic As Integer) As Integer
Declare Function B_8154_db50_reset_trigger_num Lib "8154.dll" Alias "_8154_db50_reset_trigger_num" (ByVal CardId As Integer, ByVal Channel As Integer) As Integer
Declare Function B_8154_db50_get_trigger_num Lib "8154.dll" Alias "_8154_db50_get_trigger_num" (ByVal CardId As Integer, ByVal Channel As Integer, TriggerNum As Double) As Integer
'
'  Comparator: Section 5.6
Declare Function B_8154_db50_enable_comparator Lib "8154.dll" Alias "_8154_db50_enable_comparator" (ByVal CardId As Integer, ByVal enable As Integer) As Integer
Declare Function B_8154_db50_set_comparator_data Lib "8154.dll" Alias "_8154_db50_set_comparator_data" (ByVal CardId As Integer, ByVal CmpData As Long) As Integer
Declare Function B_8154_db50_get_comparator_data Lib "8154.dll" Alias "_8154_db50_get_comparator_data" (ByVal CardId As Integer, CmpData As Long) As Integer
'
' FIFO Comparing: Section 5.7
Declare Function B_8154_db50_reset_fifo Lib "8154.dll" Alias "_8154_db50_reset_fifo" (ByVal CardId As Integer) As Integer
Declare Function B_8154_db50_get_fifo_status Lib "8154.dll" Alias "_8154_db50_get_fifo_status" (ByVal CardId As Integer, FifoSts As Integer) As Integer
Declare Function B_8154_db50_set_fifo_array Lib "8154.dll" Alias "_8154_db50_set_fifo_array" (ByVal CardId As Integer, ByVal ArraySize As Long, DataArr As Long, ByVal ShiftFlag As Integer) As Integer
Declare Function B_8154_db50_set_fifo_shift Lib "8154.dll" Alias "_8154_db50_set_fifo_shift" (ByVal CardId As Integer) As Integer
Declare Function B_8154_db50_set_fifo_low_level Lib "8154.dll" Alias "_8154_db50_set_fifo_low_level" (ByVal CardId As Integer, ByVal Level As Integer) As Integer
Declare Function B_8154_db50_get_fifo_low_level Lib "8154.dll" Alias "_8154_db50_get_fifo_low_level" (ByVal CardId As Integer, Level As Integer) As Integer
'
'  Linear Comparing: Section 5.8
Declare Function B_8154_db50_enable_linear_compare Lib "8154.dll" Alias "_8154_db50_enable_linear_compare" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal enable As Integer) As Integer
Declare Function B_8154_db50_set_linear_compare Lib "8154.dll" Alias "_8154_db50_set_linear_compare" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal StartPoint As Long, ByVal RepeatTimes As Double, ByVal Interval As Integer) As Integer
Declare Function B_8154_db50_get_linear_compare_data Lib "8154.dll" Alias "_8154_db50_get_linear_compare_data" (ByVal CardId As Integer, ByVal Channel As Integer, CurrentData As Double) As Integer
'
'  Manual Trigger: Section 5.9
Declare Function B_8154_db50_manual_trigger Lib "8154.dll" Alias "_8154_db50_manual_trigger" (ByVal CardId As Integer, ByVal Channel As Integer) As Integer
'
' General-purposed Input/Output Section 5.10
Declare Function B_8154_db50_set_gpio_output Lib "8154.dll" Alias "_8154_db50_set_gpio_output" (ByVal CardId As Integer, ByVal DoValue As Integer) As Integer
